# CoMD-SYCL

script-windows/: run_comd_msys2.bat
src-occl/: CMakeLists.txt  CoMD.cpp  CoMDTypes.h  Makefile  README.md  decomposition.h  defines.h  eam.cpp  gpu_kernels.cpp  gpu_kernels.h  gpu_neighborList.cpp  gpu_neighborList.h  gpu_types.h  gpu_utility.cpp  gpu_utility.h  haloExchange.cpp  haloExchange.h  initAtoms.h  linkCells.cpp  linkCells.h  mytype.h  parallel.cpp  parallel.h  performanceTimers.h  sycl_common.h  timestep.cpp
